--- a/Assigment3WalmartLogin/settings.gradle
+++ b/Assigment3WalmartLogin/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Assigment3"
+rootProject.name = "Assigment3WalmartLogin"
 include ':app'
