--- a/Assigment4/settings.gradle
+++ b/Assigment4/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Assigment2"
+rootProject.name = "Walmart Aplication"
 include ':app'
