--- a/Assigment4/app/src/main/AndroidManifest.xml
+++ b/Assigment4/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.WalmartAplication"
         tools:targetApi="31">
         <activity
+            android:name=".DetailActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ProductActivity"
             android:exported="false">
             <meta-data
